Closed Bug 1562906 Opened 6 years ago Closed 6 years ago

Perma build bustage on js/src/wasm/WasmIonCompile when Gecko 69 merges to Beta on 2019-07-01

Categories

(Core :: JavaScript: WebAssembly, defect, P1)

defect

Tracking

()

VERIFIED FIXED
mozilla69
Tracking Status
firefox-esr60 --- unaffected
firefox-esr68 --- unaffected
firefox67 --- unaffected
firefox68 --- unaffected
firefox69 --- fixed

People

(Reporter: dluca, Assigned: lth)

References

(Regression)

Details

(Keywords: regression)

Attachments

(1 file)

[Tracking Requested - why for this release]:

Central as Beta:https://treeherder.mozilla.org/#/jobs?repo=try&resultStatus=testfailed%2Cbusted%2Cexception%2Cretry%2Cusercancel%2Crunnable&revision=4a8ef095fc121b6e8c72e7296e751a0cbd6fb55b

Log:

https://treeherder.mozilla.org/logviewer.html#?job_id=254407805&repo=try
 INFO -  js/src/Unified_cpp_js_src11.o
[task 2019-07-02T11:37:59.952Z] 11:37:59     INFO -  make[4]: Leaving directory '/builds/worker/workspace/build/src/obj-firefox/js/src'
[task 2019-07-02T11:37:59.952Z] 11:37:59     INFO -  make[4]: Entering directory '/builds/worker/workspace/build/src/obj-firefox/js/src/jit'
[task 2019-07-02T11:37:59.952Z] 11:37:59     INFO -  /builds/worker/workspace/build/src/sccache/sccache /builds/worker/workspace/build/src/clang/bin/clang++ -m32 -o Unified_cpp_js_src_jit6.o -c  -I/builds/worker/workspace/build/src/obj-firefox/dist/system_wrappers -include /builds/worker/workspace/build/src/config/gcc_hidden.h -DDEBUG=1 -DJS_CACHEIR_SPEW -DJS_STRUCTURED_SPEW -DJS_HAS_CTYPES -DFFI_BUILDING -DEXPORT_JS_API -DMOZ_HAS_MOZGLUE -I/builds/worker/workspace/build/src/js/src/jit -I/builds/worker/workspace/build/src/obj-firefox/js/src/jit -I/builds/worker/workspace/build/src/obj-firefox/js/src -I/builds/worker/workspace/build/src/js/src -I/builds/worker/workspace/build/src/obj-firefox/dist/include -I/builds/worker/workspace/build/src/obj-firefox/dist/include/nspr -fPIC -DMOZILLA_CLIENT -include /builds/worker/workspace/build/src/obj-firefox/js/src/js-confdefs.h -Qunused-arguments -U_FORTIFY_SOURCE -D_FORTIFY_SOURCE=2 -fstack-protector-strong -Qunused-arguments -Wall -Wbitfield-enum-conversion -Wempty-body -Wignored-qualifiers -Woverloaded-virtual -Wpointer-arith -Wshadow-field-in-constructor-modified -Wsign-compare -Wtype-limits -Wunreachable-code -Wunreachable-code-return -Wwrite-strings -Wno-invalid-offsetof -Wclass-varargs -Wfloat-overflow-conversion -Wfloat-zero-conversion -Wloop-analysis -Wc++1z-compat -Wc++2a-compat -Wcomma -Wimplicit-fallthrough -Werror=non-literal-null-conversion -Wstring-conversion -Wtautological-overlap-compare -Wtautological-unsigned-enum-zero-compare -Wtautological-unsigned-zero-compare -Wno-inline-new-delete -Wno-error=deprecated-declarations -Wno-error=array-bounds -Wno-error=backend-plugin -Wno-error=return-std-move -Wno-error=atomic-alignment -Wformat -Wformat-security -Wno-gnu-zero-variadic-macro-arguments -Wno-noexcept-type -Wno-unknown-warning-option -Wno-return-type-c-linkage -D_GLIBCXX_USE_CXX11_ABI=0 -fno-sized-deallocation -fcrash-diagnostics-dir=/builds/worker/artifacts -march=pentium-m -msse -msse2 -mfpmath=sse -U_FORTIFY_SOURCE -D_FORTIFY_SOURCE=2 -fstack-protector-strong -fno-rtti -ffunction-sections -fdata-sections -fno-exceptions -fno-math-errno -pthread -pipe -g -Xclang -load -Xclang /builds/worker/workspace/build/src/obj-firefox/build/clang-plugin/libclang-plugin.so -Xclang -add-plugin -Xclang moz-check -O3 -fno-omit-frame-pointer -funwind-tables -Werror -fno-strict-aliasing -Werror=format -Wno-shadow  -MD -MP -MF .deps/Unified_cpp_js_src_jit6.o.pp   /builds/worker/workspace/build/src/obj-firefox/js/src/jit/Unified_cpp_js_src_jit6.cpp
[task 2019-07-02T11:37:59.952Z] 11:37:59     INFO -  make[4]: Leaving directory '/builds/worker/workspace/build/src/obj-firefox/js/src/jit'
[task 2019-07-02T11:37:59.952Z] 11:37:59     INFO -  make[4]: Entering directory '/builds/worker/workspace/build/src/obj-firefox/js/src/jit'
[task 2019-07-02T11:37:59.952Z] 11:37:59     INFO -  js/src/jit/Unified_cpp_js_src_jit9.o
[task 2019-07-02T11:37:59.952Z] 11:37:59     INFO -  make[4]: Leaving directory '/builds/worker/workspace/build/src/obj-firefox/js/src/jit'
[task 2019-07-02T11:38:00.048Z] 11:38:00     INFO -  make[4]: Entering directory '/builds/worker/workspace/build/src/obj-firefox/js/src'
[task 2019-07-02T11:38:00.048Z] 11:38:00     INFO -  /builds/worker/workspace/build/src/sccache/sccache /builds/worker/workspace/build/src/clang/bin/clang++ -m32 -o Unified_cpp_js_src1.o -c  -I/builds/worker/workspace/build/src/obj-firefox/dist/system_wrappers -include /builds/worker/workspace/build/src/config/gcc_hidden.h -DDEBUG=1 -DJS_CACHEIR_SPEW -DJS_STRUCTURED_SPEW -DJS_HAS_CTYPES -DFFI_BUILDING -DEXPORT_JS_API -DMOZ_HAS_MOZGLUE -I/builds/worker/workspace/build/src/js/src -I/builds/worker/workspace/build/src/obj-firefox/js/src -I/builds/worker/workspace/build/src/obj-firefox/js/src/ctypes/libffi/include -I/builds/worker/workspace/build/src/js/src/ctypes/libffi/src/x86 -I/builds/worker/workspace/build/src/obj-firefox/dist/include -I/builds/worker/workspace/build/src/obj-firefox/dist/include/nspr -fPIC -DMOZILLA_CLIENT -include /builds/worker/workspace/build/src/obj-firefox/js/src/js-confdefs.h -Qunused-arguments -U_FORTIFY_SOURCE -D_FORTIFY_SOURCE=2 -fstack-protector-strong -Qunused-arguments -Wall -Wbitfield-enum-conversion -Wempty-body -Wignored-qualifiers -Woverloaded-virtual -Wpointer-arith -Wshadow-field-in-constructor-modified -Wsign-compare -Wtype-limits -Wunreachable-code -Wunreachable-code-return -Wwrite-strings -Wno-invalid-offsetof -Wclass-varargs -Wfloat-overflow-conversion -Wfloat-zero-conversion -Wloop-analysis -Wc++1z-compat -Wc++2a-compat -Wcomma -Wimplicit-fallthrough -Werror=non-literal-null-conversion -Wstring-conversion -Wtautological-overlap-compare -Wtautological-unsigned-enum-zero-compare -Wtautological-unsigned-zero-compare -Wno-inline-new-delete -Wno-error=deprecated-declarations -Wno-error=array-bounds -Wno-error=backend-plugin -Wno-error=return-std-move -Wno-error=atomic-alignment -Wformat -Wformat-security -Wno-gnu-zero-variadic-macro-arguments -Wno-noexcept-type -Wno-unknown-warning-option -Wno-return-type-c-linkage -D_GLIBCXX_USE_CXX11_ABI=0 -fno-sized-deallocation -fcrash-diagnostics-dir=/builds/worker/artifacts -march=pentium-m -msse -msse2 -mfpmath=sse -U_FORTIFY_SOURCE -D_FORTIFY_SOURCE=2 -fstack-protector-strong -fno-rtti -ffunction-sections -fdata-sections -fno-exceptions -fno-math-errno -pthread -pipe -g -Xclang -load -Xclang /builds/worker/workspace/build/src/obj-firefox/build/clang-plugin/libclang-plugin.so -Xclang -add-plugin -Xclang moz-check -O3 -fno-omit-frame-pointer -funwind-tables -Werror -fno-strict-aliasing -Werror=format -Wno-shadow  -MD -MP -MF .deps/Unified_cpp_js_src1.o.pp   /builds/worker/workspace/build/src/obj-firefox/js/src/Unified_cpp_js_src1.cpp
[task 2019-07-02T11:38:00.048Z] 11:38:00     INFO -  make[4]: Leaving directory '/builds/worker/workspace/build/src/obj-firefox/js/src'
[task 2019-07-02T11:38:00.064Z] 11:38:00     INFO -  make[4]: Entering directory '/builds/worker/workspace/build/src/obj-firefox/js/src'
[task 2019-07-02T11:38:00.064Z] 11:38:00     INFO -  js/src/Unified_cpp_js_src12.o
[task 2019-07-02T11:38:00.064Z] 11:38:00     INFO -  make[4]: Leaving directory '/builds/worker/workspace/build/src/obj-firefox/js/src'
[task 2019-07-02T11:38:00.081Z] 11:38:00     INFO -  make[4]: Entering directory '/builds/worker/workspace/build/src/obj-firefox/js/src/wasm'
[task 2019-07-02T11:38:00.081Z] 11:38:00     INFO -  /builds/worker/workspace/build/src/sccache/sccache /builds/worker/workspace/build/src/clang/bin/clang++ -m32 -o Unified_cpp_js_src_wasm1.o -c  -I/builds/worker/workspace/build/src/obj-firefox/dist/system_wrappers -include /builds/worker/workspace/build/src/config/gcc_hidden.h -DDEBUG=1 -DJS_CACHEIR_SPEW -DJS_STRUCTURED_SPEW -DJS_HAS_CTYPES -DFFI_BUILDING -DEXPORT_JS_API -DMOZ_HAS_MOZGLUE -I/builds/worker/workspace/build/src/js/src/wasm -I/builds/worker/workspace/build/src/obj-firefox/js/src/wasm -I/builds/worker/workspace/build/src/obj-firefox/js/src -I/builds/worker/workspace/build/src/js/src -I/builds/worker/workspace/build/src/obj-firefox/dist/include -I/builds/worker/workspace/build/src/obj-firefox/dist/include/nspr -fPIC -DMOZILLA_CLIENT -include /builds/worker/workspace/build/src/obj-firefox/js/src/js-confdefs.h -Qunused-arguments -U_FORTIFY_SOURCE -D_FORTIFY_SOURCE=2 -fstack-protector-strong -Qunused-arguments -Wall -Wbitfield-enum-conversion -Wempty-body -Wignored-qualifiers -Woverloaded-virtual -Wpointer-arith -Wshadow-field-in-constructor-modified -Wsign-compare -Wtype-limits -Wunreachable-code -Wunreachable-code-return -Wwrite-strings -Wno-invalid-offsetof -Wclass-varargs -Wfloat-overflow-conversion -Wfloat-zero-conversion -Wloop-analysis -Wc++1z-compat -Wc++2a-compat -Wcomma -Wimplicit-fallthrough -Werror=non-literal-null-conversion -Wstring-conversion -Wtautological-overlap-compare -Wtautological-unsigned-enum-zero-compare -Wtautological-unsigned-zero-compare -Wno-inline-new-delete -Wno-error=deprecated-declarations -Wno-error=array-bounds -Wno-error=backend-plugin -Wno-error=return-std-move -Wno-error=atomic-alignment -Wformat -Wformat-security -Wno-gnu-zero-variadic-macro-arguments -Wno-noexcept-type -Wno-unknown-warning-option -Wno-return-type-c-linkage -D_GLIBCXX_USE_CXX11_ABI=0 -fno-sized-deallocation -fcrash-diagnostics-dir=/builds/worker/artifacts -march=pentium-m -msse -msse2 -mfpmath=sse -U_FORTIFY_SOURCE -D_FORTIFY_SOURCE=2 -fstack-protector-strong -fno-rtti -ffunction-sections -fdata-sections -fno-exceptions -fno-math-errno -pthread -pipe -g -Xclang -load -Xclang /builds/worker/workspace/build/src/obj-firefox/build/clang-plugin/libclang-plugin.so -Xclang -add-plugin -Xclang moz-check -O3 -fno-omit-frame-pointer -funwind-tables -Werror -fno-strict-aliasing -Werror=format -Wno-shadow  -MD -MP -MF .deps/Unified_cpp_js_src_wasm1.o.pp   /builds/worker/workspace/build/src/obj-firefox/js/src/wasm/Unified_cpp_js_src_wasm1.cpp
[task 2019-07-02T11:38:00.081Z] 11:38:00     INFO -  In file included from /builds/worker/workspace/build/src/obj-firefox/js/src/wasm/Unified_cpp_js_src_wasm1.cpp:38:
[task 2019-07-02T11:38:00.081Z] 11:38:00    ERROR -  /builds/worker/workspace/build/src/js/src/wasm/WasmIonCompile.cpp:2868:7: error: invalid argument type 'js::wasm::Shareable' to unary expression
[task 2019-07-02T11:38:00.081Z] 11:38:00     INFO -    if (!f.env().sharedMemoryEnabled) {
[task 2019-07-02T11:38:00.081Z] 11:38:00     INFO -        ^~~~~~~~~~~~~~~~~~~~~~~~~~~~
[task 2019-07-02T11:38:00.081Z] 11:38:00    ERROR -  /builds/worker/workspace/build/src/js/src/wasm/WasmIonCompile.cpp:2929:7: error: invalid argument type 'js::wasm::Shareable' to unary expression
[task 2019-07-02T11:38:00.082Z] 11:38:00     INFO -    if (!f.env().sharedMemoryEnabled) {
[task 2019-07-02T11:38:00.082Z] 11:38:00     INFO -        ^~~~~~~~~~~~~~~~~~~~~~~~~~~~
[task 2019-07-02T11:38:00.082Z] 11:38:00    ERROR -  /builds/worker/workspace/build/src/js/src/wasm/WasmIonCompile.cpp:2968:7: error: invalid argument type 'js::wasm::Shareable' to unary expression
[task 2019-07-02T11:38:00.082Z] 11:38:00     INFO -    if (!f.env().sharedMemoryEnabled) {
[task 2019-07-02T11:38:00.082Z] 11:38:00     INFO -        ^~~~~~~~~~~~~~~~~~~~~~~~~~~~
[task 2019-07-02T11:38:00.082Z] 11:38:00    ERROR -  /builds/worker/workspace/build/src/js/src/wasm/WasmIonCompile.cpp:3010:7: error: invalid argument type 'js::wasm::Shareable' to unary expression
[task 2019-07-02T11:38:00.082Z] 11:38:00     INFO -    if (!f.env().sharedMemoryEnabled) {
[task 2019-07-02T11:38:00.082Z] 11:38:00     INFO -        ^~~~~~~~~~~~~~~~~~~~~~~~~~~~
[task 2019-07-02T11:38:00.082Z] 11:38:00     INFO -  4 errors generated.
[task 2019-07-02T11:38:00.082Z] 11:38:00     INFO -  /builds/worker/workspace/build/src/config/rules.mk:801: recipe for target 'Unified_cpp_js_src_wasm1.o' failed
[task 2019-07-02T11:38:00.082Z] 11:38:00    ERROR -  make[4]: *** [Unified_cpp_js_src_wasm1.o] Error 1
[task 2019-07-02T11:38:00.082Z] 11:38:00     INFO -  make[4]: Leaving directory '/builds/worker/workspace/build/src/obj-firefox/js/src/wasm'
[task 2019-07-02T11:38:00.082Z] 11:38:00     INFO -  make[4]: *** Waiting for unfinished jobs....
[task 2019-07-02T11:38:00.085Z] 11:38:00     INFO -  make[4]: Entering directory '/builds/worker/workspace/build/src/obj-firefox/js/src'
[task 2019-07-02T11:38:00.085Z] 11:38:00     INFO -  js/src/Unified_cpp_js_src13.o
[task 2019-07-02T11:38:00.085Z] 11:38:00     INFO -  make[4]: Leaving directory '/builds/worker/workspace/build/src/obj-firefox/js/src'
[task 2019-07-02T11:38:00.148Z] 11:38:00     INFO -  make[4]: Entering directory '/builds/worker/workspace/build/src/obj-firefox/media/libjpeg'
[task 2019-07-02T11:38:00.149Z] 11:38:00     INFO -  media/libjpeg/jcphuff.o

This bustage seems to be caused by bug 1561747.

Lars could you please take a look at this bug?

Flags: needinfo?(lhansen)
Assignee: nobody → lhansen
Status: NEW → ASSIGNED
Flags: needinfo?(lhansen)
Priority: -- → P1

The sharedMemoryEnabled attribute of the module environment is not a
boolean, but a true/false enum, and must be tested through an explicit
comparison with one of the enum values.

Pushed by lhansen@mozilla.com: https://hg.mozilla.org/integration/autoland/rev/e2786b16410c Test non-booleans with explicit comparisons. r=jseward
Status: ASSIGNED → RESOLVED
Closed: 6 years ago
Resolution: --- → FIXED
Target Milestone: --- → mozilla69
Regressions: 1563241
Has Regression Range: --- → yes
You need to log in before you can comment on or make changes to this bug.

Attachment

General

Created:
Updated:
Size: