Bug 1562906 - Test non-booleans with explicit comparisons.  r=jseward

The sharedMemoryEnabled attribute of the module environment is not a
boolean, but a true/false enum, and must be tested through an explicit
comparison with one of the enum values.

Differential Revision: https://phabricator.services.mozilla.com/D36619

--HG--
extra : moz-landing-system : lando